# gemini-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: conversation.rs  count-tokens.rs  generate_image.rs  google-search-retrieval.rs  google-search.rs  json-schema.rs  safety-setting.rs  system_instruction.rs  text-embedding.rs  text-from-text-streaming.rs  text-from-text.rs
src/: client.rs  conversation.rs  dialogue.rs  error.rs  lib.rs  token_provider.rs  types.rs  vertex_client.rs
src/types/: common.rs  count_tokens.rs  error.rs  generate_content.rs  mod.rs  predict_image.rs  text_embeddings.rs
