[package]
name = "gemini-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadqueue = "0.2"
futures-util = "0.3"
gcp_auth = "0.12"
reqwest = { version = "0.12", features = ["json", "gzip"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
serde_with = { version = "3.9", features = ["base64"]}
tracing = "0.1"
tokio = { version = "1" }

[dev-dependencies]
console = "0.15.8"
dialoguer = "0.11.0"
image = "0.25.2"
indicatif = "0.17.8"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
